Add information about log and log out

--- a/client/index.html
+++ b/client/index.html
@@ -29,10 +29,6 @@
       <!-- messages list -->
       <ul class="messages-section__list" id="messages-list">
         <li class="message">
-          <h3 class="message__author">John Doe</h3>
-          <div class="message__content">
-            Hello!
-          </div>
         </li>
       </ul>
 
@@ -45,7 +41,7 @@
     </section>
 
   </main>
-  <script src="./app.js"></script>
-  <!-- type="module" -->
+  <script src="./app.js" type="module"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
 </body>
 </html>
